<resources>
    <string name="app_name">SwingBeat(Beta)</string>


    <string name="goHomePage">스윙에어(Swing Air) 보러가기</string>
    <string name="virtual_drum">[Virtual Drum]</string>
    <string name="virtual_drumText1">Swing Air와 함께 신나는 가상드럼을</string>
    <string name="virtual_drumText2">체험해 보세요!</string>
    <string name="rythm_game">[Swing Rhythm]</string>
    <string name="rythm_gameText1">Swing Air와 함께 떨어지는 비트에</string>
    <string name="rythm_gameText2">따라 리듬을 맞춰보세요!</string>
    <string name="speed_test">[Speed Test]</string>
    <string name="speed_testText1">Swing Air와 함께 사용자의</string>
    <string name="speed_testText2">반응속도를 테스트 해보세요!!</string>
    <string name="exitMessage">\"Back\"버튼 을 한번 더 눌러 SwingBeat를 종료</string>
    <string name="confirm">확인</string>178021
    <string name="cancel">취소</string>
    <string name="setting">Setting</string>
    <string name="click1">1번 버튼 클릭 시 :</string>
    <string name="click2">2번 버튼 클릭 시 :</string>
    <string name="click3">3번 버튼 클릭 시 :</string>
    <string name="click4">4번 버튼 클릭 시 :</string>
    <string name="click5">5번 버튼 클릭 시 :</string>
    <string name="click6">6번 버튼 클릭 시 :</string>
    <string name="click7">7번 버튼 클릭 시 :</string>
    <string name="click8">8번 버튼 클릭 시 :</string>
    <string name="click9">9번 버튼 클릭 시 :</string>
    <string name="click10">10번 버튼 클릭 시 :</string>
    <string name="saveNQuit">저장하고 나가기</string>
    <string name="sound_track">Sound Track</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="perfect">Perfect!</string>
    <string name="combo">Combo</string>
    <string name="start_test">테스트 시작</string>
    <string name="title_test">[색 반응 테스트]</string>
    <string name="test_description1">이 테스트는 글자의 색을 따르는 것이 아닌 \'텍스트가 지시하는 색상에 맞추어\' 버튼을 누르는 테스트 입니다.</string>
    <string name="test_description2">예를 들어,</string>
    <string name="test_description3">빨강</string>
    <string name="test_description4">이라면 사용자는 적색 버튼을 눌러야 하는 것이죠.</string>
    <string name="test_description5">문제는 총 25문제로, 각 문제당 4점씩 배분됩니다.</string>
    <string name="test_description6">속도는 일반적으로 문제당 0.8초 내로 반응됩니다.</string>
    <string name="test_description7">※ 정답 개수에 따른 등급 배분표</string>
    <string name="game_over">게임종료</string>
    <string name="start">START</string>
    <string name="blue">파랑</string>
    <string name="red">빨강</string>
    <string name="green">초록</string>
    <string name="yellow">노랑</string>
    <string name="no">No.</string>
    <string name="_0">0</string>
    <string name="score">Score</string>
    <string name="divide25">/25</string>
    <string name="yeah">Yeah~!</string>
    <string name="result">[결과]</string>
    <string name="grade">등급</string>
    <string name="good">우수</string>
    <string name="score2">맞은 개수</string>
    <string name="goBack">처음으로 돌아가기</string>
    <string name="ms">시간 간격(ms)</string>
    <string name="manual">Key Map</string>
    <string name="KeyMap">Key1 : 방향키 위(↑)\nKey2 : 방향키 아래(↓)\nKey3 : 방향키 좌(←)\nKey4 : 방향키 우(→)
\nKey5 : 엔터(Enter)\n\nExtension Mode (2 Swing Air)\n\nKey6 : 1\nKey7 : 2\nKey8 : 3\nKey9 : 4\nKey10 : 5</string>
    <string name="result_perfect">Perfect</string>
    <string name="result_good">Good</string>
    <string name="result_bad">Bad</string>
    <string name="total_right">총 맞춘 개수</string>
    <string name="game_over_en">Game over!</string>
    <string name="easter_foot">Created by 솔직헌심정 - TrueMind</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="b">B</string>
    <string name="loading_drum">드럼을 불러오는 중입니다.</string>
    <string name="please_wait">잠시만 기다려 주세요...</string>
</resources>
