<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_back"
    android:orientation="vertical">

    <LinearLayout style="@style/whiteBackLayoutFullMargin20">

        <TextView
            android:id="@+id/title"
            style="@style/testTxtCommonTitle"
            android:text="@string/title_test" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical|end"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:text="@string/ms"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/timerSet"
                    android:layout_width="140dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:background="@drawable/spinner"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text1"
                    style="@style/testDescriptionText1"
                    android:text="@string/test_description1" />

                <TextView
                    android:id="@+id/text2"
                    style="@style/testDescriptionText1"
                    android:text="@string/test_description2" />

                <TextView
                    android:id="@+id/text3"
                    style="@style/testDescriptionText2"
                    android:text="@string/test_description3" />

                <TextView
                    android:id="@+id/text4"
                    style="@style/testDescriptionText1"
                    android:text="@string/test_description4" />

                <TextView
                    android:id="@+id/text5"
                    style="@style/testDescriptionText1"
                    android:text="@string/test_description5" />

                <TextView
                    android:id="@+id/text6"
                    style="@style/testDescriptionText1"
                    android:text="@string/test_description6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginRight="10dp"
                    android:text="@string/test_description7"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/table"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@drawable/test_table" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnStart"
        style="@style/bottomBtnCommonBase">

        <TextView
            android:id="@+id/btnText"
            style="@style/bottomBtnCommonText"
            android:text="@string/start_test" />

    </LinearLayout>

</LinearLayout>