<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_back"
    android:orientation="vertical">

    <FrameLayout style="@style/whiteBackLayoutFullMargin20">

        <TextView
            android:id="@+id/title"
            style="@style/testTxtCommonTitle"
            android:text="@string/result" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/gradeTitle"
                    style="@style/testResultTitleTextStyle"
                    android:text="@string/grade" />

                <TextView
                    android:id="@+id/grade"
                    style="@style/testResultScoreTextStyle"
                    android:text="@string/good" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scoreTitle"
                    style="@style/testResultTitleTextStyle"
                    android:text="@string/score2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/score"
                        style="@style/testResultScoreTextStyle"
                        android:text="@string/_0" />

                    <TextView
                        android:id="@+id/scoreBy25"
                        style="@style/testResultScoreTextStyle"
                        android:text="@string/divide25" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:text="@string/test_description7"
                android:textColor="#000"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:background="@null"
                android:scaleType="fitCenter"
                android:src="@drawable/test_table" />

        </LinearLayout>


    </FrameLayout>

    <LinearLayout
        android:id="@+id/btnBack"
        style="@style/bottomBtnCommonBase">

        <TextView
            android:id="@+id/btnText"
            style="@style/bottomBtnCommonText"
            android:text="@string/goBack" />

    </LinearLayout>

</LinearLayout>