<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_back"
    android:orientation="vertical">

    <FrameLayout style="@style/testWhiteBackLayoutFullMargin20">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/numberTitle"
                    style="@style/testScoreTextStyle"
                    android:text="@string/no" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#000" />

                <TextView
                    android:id="@+id/number"
                    style="@style/testScoreTextStyle"
                    android:text="@string/_0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/scoreTitle"
                    style="@style/testScoreTextStyle"
                    android:text="@string/score" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#000" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/score"
                        style="@style/testScoreTextStyle"
                        android:text="@string/_0" />

                    <TextView
                        android:id="@+id/scoreBy25"
                        style="@style/testScoreTextStyle"
                        android:text="@string/divide25" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:visibility="invisible"
            android:id="@+id/yeah"
            android:layout_margin="60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#487435"
            android:text="@string/yeah"/>

        <TextView
            android:id="@+id/textColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="#000"
            android:textSize="110sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ImageButton
            android:id="@+id/btn1"
            style="@style/testBtnColorStyle"
            android:background="@drawable/test_btn_1" />

        <ImageButton
            android:id="@+id/btn2"
            style="@style/testBtnColorStyle"
            android:background="@drawable/test_btn_2" />

        <ImageButton
            android:id="@+id/btn3"
            style="@style/testBtnColorStyle"
            android:background="@drawable/test_btn_3" />

        <ImageButton
            android:id="@+id/btn4"
            style="@style/testBtnColorStyle"
            android:background="@drawable/test_btn_4" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/btnQuit"
            style="@style/testBtnColorStyle"
            android:layout_marginRight="0dp"
            android:background="@drawable/test_btn_5"
            android:gravity="center">

            <TextView
                android:id="@+id/btn5Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:textColor="#fff"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>